# MicroGFS

./: .gitignore  CMakeLists.txt  README.md  client.cpp  script.sh  server.cpp
protos/: calculator.proto
src/: main.h
src/client/: client.cpp  client.h  gen.sh  utils.cpp  utils.h
src/client/protos/: GFSClientService.proto
src/headers/: btree.h  main.h
src/lib/logger/: logger.cpp  logger.h
src/lib/lru_cache/: lru_cache.cpp  lru_cache.h
src/lib/tcp/: tcp_client.h  tcp_server.h
src/master/: cli-args-parser.cpp  gen  master.cpp  master.h  utils.cpp  utils.h
src/master/headers/: cli-args-parser.h
src/master/protos/: GFSMasterService.proto
src/server/: cli-args-parser.cpp  gen  notes.MD  server.cpp  server.h  utils.cpp  utils.h
src/server/headers/: cli-args-parser.h
src/server/protos/: GFSChunkServer.proto
test_scripts/: master.sh  primary.sh  server1.sh  server2.sh  server3.sh
